# customer-support-chatbot-phase1-live-v2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: clock.py  columns.py  config.py  greeting.py  main.py  report.py  traces_router.py  whats_new.py
backend/app/agent/: caps.py  ctx.py  events.py  forms.py  loop.py  prompt.py  router.py  schema.sql  store.py  tickets.py  tools.py  tracing.py
backend/app/data/: __init__.py  brokerage.py  envelope.py  holdings.py  money.py  normalize.py
backend/app/finx/: __init__.py  client.py  delivery.py  routing.py
backend/app/kb/: embed.py  router.py  search.py
backend/app/reports/: __init__.py  contract_notes.py  ledger.py  tax.py
backend/content/: column_registry.json  greetings.json  market_calendar.json  whats_new.json
backend/scripts/: kb_bench.py
backend/tests/: conftest.py  test_agent_config.py  test_agent_events.py  test_agent_forms.py  test_agent_loop.py  test_agent_store.py  test_agent_tickets.py  test_agent_tools.py  test_agent_tracing.py  test_clock.py  test_columns.py  test_data_brokerage.py  test_data_holdings.py  test_data_money.py  test_data_normalize.py  test_data_routing.py  test_finx_client.py  test_greeting_endpoint.py  test_kb_search.py  test_market_clock.py  test_name_derivation.py  test_report_contract_notes.py  test_report_ledger.py  test_report_pnl.py  test_report_tax.py  test_traces_router.py  test_whats_new.py
docs/: android_bridge_implementation.md  deployment.md  webview_bridge.md  (+1 more)
(+346 files in other folders)
