[project]
name = "choice-jini-backend"
version = "0.1.0"
description = "Choice Jini support chatbot backend (FastAPI) - phase 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
